Finally got it working without dropping connection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Wilson\\anaconda3\\envs\\tracker\\python.exe"
+    "python.pythonPath": "C:\\Users\\Wilson\\anaconda3\\envs\\tracker\\python.exe",
+    "python.dataScience.jupyterServerURI": "local"
 }
